--- a/src/app/forms/form-vanzari/form-vanzari.component.html
+++ b/src/app/forms/form-vanzari/form-vanzari.component.html
@@ -1,5 +1,16 @@
+<div>
 <div class="d-flex">
     <app-menu id="menu-object"></app-menu>
+    <div  style="margin-top: 120px;">
+        <mat-form-field appearance="fill">
+            <mat-label>Choose a database</mat-label>
+            <mat-select (selectionChange)="selectedValue($event)">
+                <mat-option *ngFor="let connection of dbConnections" [value]="connection.value">
+                    {{connection.value}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
     <div class="col-sm-8 mt-4">
         <div id="form-title">
             Adauga o noua Vanzare
@@ -172,6 +183,9 @@
             </div>
         </div>
     </div>
+
+    
+</div>
 
 
 </div>
