Fixed virtual fragmentation for 3 tables and created Address form and table

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -24,6 +24,11 @@
             </div>
         </div>
         <div class="option">
+            <div class="option-text" (click)="goToAdreseForm()">
+                Adrese
+            </div>
+        </div>
+        <div class="option">
             <div class="option-text" (click)="goToParteneriForm()">
                 Parteneri
             </div>
@@ -69,6 +74,11 @@
         <div class="option">
             <div class="option-text" (click)="goToArticoleTable()">
                 Articole
+            </div>
+        </div>
+        <div class="option">
+            <div class="option-text" (click)="goToAdreseTable()">
+                Adrese
             </div>
         </div>
         <div class="option">
