error message for Proiecte table

--- a/src/app/forms/form-vanzari/form-vanzari.component.html
+++ b/src/app/forms/form-vanzari/form-vanzari.component.html
@@ -4,7 +4,7 @@
     <div  style="margin-top: 120px;">
         <mat-form-field appearance="fill">
             <mat-label>Choose a database</mat-label>
-            <mat-select (selectionChange)="selectedValue($event)">
+            <mat-select (selectionChange)="selectedValue($event)"  [(value)]="defaultDB">
                 <mat-option *ngFor="let connection of dbConnections" [value]="connection.value">
                     {{connection.value}}
                 </mat-option>
