--- a/src/app/forms/form-vanzatori/form-vanzatori.component.html
+++ b/src/app/forms/form-vanzatori/form-vanzatori.component.html
@@ -111,7 +111,7 @@
     <div class="col-sm-4" style="margin-top: 110px;">
         <mat-form-field appearance="fill">
             <mat-label>Choose a database</mat-label>
-            <mat-select (selectionChange)="selectedValue($event)">
+            <mat-select (selectionChange)="selectedValue($event)"  [(value)]="defaultDB">
                 <mat-option *ngFor="let connection of dbConnections" [value]="connection.value">
                     {{connection.value}}
                 </mat-option>
