--- a/src/app/tables/table-proiecte/table-proiecte.component.scss
+++ b/src/app/tables/table-proiecte/table-proiecte.component.scss
@@ -1,42 +1,55 @@
-.form-container{
-    background-color: cyan;
-    height: 200px;
-    width: 20px;
+.form-container {
+  background-color: cyan;
+  height: 200px;
+  width: 20px;
 }
 
-#menu-object{
-width: 800px;
-margin-right: -500px;
+.warning-card {
+  width: 600px;
+  height: 100px;
+  background-color: burlywood;
+  border-radius: 12px;
 }
 
-#select-unitate-id{
-    width:186px;
-    margin-top:20px
+.warning-message {
+  font-size: 30px;
+  font-weight: 600;
+  margin-left: 20px;
+  margin-right: auto;
 }
 
-#form-title{
-    font-size: 30px;
-    font-weight: 400;
-    margin-bottom: 30px;
+#menu-object {
+  width: 800px;
+  margin-right: -500px;
 }
 
-#adauga-btn{
-    background-color:wheat;
-    width: 110px;
-    border-radius: 10px;
+#select-unitate-id {
+  width: 186px;
+  margin-top: 20px;
+}
 
+#form-title {
+  font-size: 30px;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+
+#adauga-btn {
+  background-color: wheat;
+  width: 110px;
+  border-radius: 10px;
 }
 
 table {
-    width: 100%;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
-  td, th {
-    width: 20%;
-    
-  }
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+td,
+th {
+  width: 20%;
+}
