--- a/src/app/forms/form-adrese/form-adrese.component.html
+++ b/src/app/forms/form-adrese/form-adrese.component.html
@@ -8,6 +8,13 @@
       <div class="col-sm-4">
         <div class="row">
           <div class="col-sm-12 mt-4">
+            <mat-form-field>
+              <input matInput formControlName="idAdresa" required placeholder="Cod Articol">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 mt-4">
             <mat-form-field class="add-border">
               <input matInput placeholder="Nume Adresa" formControlName="numeAdresa">
             </mat-form-field>
