--- a/src/app/dialogs/general-dialog/general-dialog.component.html
+++ b/src/app/dialogs/general-dialog/general-dialog.component.html
@@ -3,7 +3,10 @@
         Esti sigur ca vrei sa stergi elementul?
     </div>
 
-    <button (click)="renunt()">Renunt</button>
-    <button (click)="da()">Da</button>
+    <div style="margin-left: 30px">
+        <button (click)="renunt()" style="margin-right: 20px;">Renunt</button>
+        <button (click)="da()">Da</button>
+    </div>
+    
 
 </div>
